2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_scale_trough):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_scale_trough):
	Use shade[2] taken from parentbg to draw the scale trough

2008-03-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c: (murrine_get_parent_bg):
	Got the notebook check a bit wrong earlier

2008-03-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c: (murrine_get_parent_bg):
	Various fixes to murrine_get_parent_bg.
	Thanks to Benjamin Berg

2008-03-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_init_from_rc):
	listviewheaderstyle = 1 for the CLEARLOOKS profile

2008-03-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_scrollbar_stepper):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_scrollbar_stepper):
	Fixed lightborder in scrollbar stepper

2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_radiobutton),
	(murrine_draw_checkbox):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_radiobutton),
	(murrine_rgba_draw_checkbox):
	* src/murrine_style.c: (murrine_style_draw_option),
	(murrine_style_draw_check):
	* src/murrine_types.h:
	Implemented inconsistent state for radiobutton

2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* src/config.h.in:
	* src/murrine_style.c: (murrine_widget_is_rgba),
	(murrine_style_draw_box):
	Added --disable-rgba at the configure,
	renamed --enable-animationtoleft to --enable-animationrtl

2008-02-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_draw_box):
	Fixed this bug:
	https://bugs.launchpad.net/ubuntu/+source/gtk2-engines-murrine/+bug/195929

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_button):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_button):
	That was part of the last commit :)
