@@ -33,13 +33,13 @@
 
 /* Opacity settings */
 #define GRADIENT_OPACITY 0.90
-#define WINDOW_OPACITY 0.86
+#define WINDOW_OPACITY 0.88
 #define ENTRY_OPACITY 0.90
 #define NOTEBOOK_OPACITY 0.92
-#define MENUBAR_OPACITY 0.92
+#define MENUBAR_OPACITY 0.88
 #define MENUBAR_GLOSSY_OPACITY 0.88
 #define MENUBAR_STRIPED_OPACITY 0.94
-#define TOOLBAR_OPACITY 0.89
+#define TOOLBAR_OPACITY 0.88
 #define TOOLBAR_GLOSSY_OPACITY 0.88
 #define MENU_OPACITY 0.90
 #define TOOLTIP_OPACITY 0.90
