@@ -1,3 +1,11 @@
+2008-04-01  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw_rgba.c: (murrine_rgba_draw_menubar):
+	* src/murrine_style.c: (murrine_style_draw_box):
+	* src/support.h:
+	Less opacity, less transparency on windows (testing, tell me if it is ugly)
+	GTK_SHADOW_NONE support on RGBA menubars
+
 2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c: (murrine_draw_scale_trough):
